added option to get only new gists or all gists
